Devfeat(*) DevFest branding added

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,19 @@
 <div class="home-component">
     <app-section-topo></app-section-topo>
-    <!--
-        <call-for-proposals></call-for-proposals>
-    -->
-
+    
+    <div class="about">
+        <h1><strong>GDG DevFest 2019</strong></h1>
+        <h3>Be a Hero. Be a GDG!</h3>
+        <p>The biggest Google tech conference in Medellin carefully crafted for you by GDG community! All about Android, Angular, Web and Cloud from the world experts</p>
+        <!-- <p>GDG DevFest Medellín, brinda a la comunidad una serie de charlas y mucho networking para que aprendas sobre las últimas tecnologías de Google.</p> -->
+    </div>
+   
     <app-section-guests></app-section-guests>
-    <app-speakers></app-speakers>
-    <app-schedule></app-schedule>
+
+    <call-for-proposals></call-for-proposals>
+
+    <!-- <app-speakers></app-speakers> -->
+    <!-- <app-schedule></app-schedule> -->
 
     <app-section-mapa></app-section-mapa>
 
@@ -14,13 +21,25 @@
 
     <app-section-matriz></app-section-matriz>
 
-    <p class="poweredby">
-        Fork us:
-        <a
-            class="c-sushi"
-            href="https://github.com/carlosrojaso/angular-week"
-            target="_blank"
-            >WebApp</a
-        >
-    </p>
+    <div class="poweredby">
+        <a href="https://www.meetup.com/GDG-Medellin/" target="_blank">GDG Medellín</a>
+        <ul class="social">
+            <li>
+                <a href="https://twitter.com/gdgmed/" target="_blank" title="GDG Medellin">
+                        <img class="person-arrow" src="/assets/img/social/twitter.svg" />
+                </a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/gdgmed/" target="_blank" title="GDG Medellin">
+                    <img class="person-arrow" src="/assets/img/social/instagram.svg" />
+                </a>
+            </li>
+            <li>
+                <a href="https://www.facebook.com/gdgmedellin/" target="_blank" title="GDG Medellin">
+                    <img class="person-arrow" src="/assets/img/social/facebook.svg" />
+                </a>
+            </li>
+            
+        </ul>
+    </div>
 </div>
