--- a/src/app/home/section-apoio/section-apoio.component.html
+++ b/src/app/home/section-apoio/section-apoio.component.html
@@ -20,6 +20,15 @@
                     ><img src="/assets/img/yuxi.png" alt="Yuxi Global"
                 /></a>
             </div>
+            <div>
+                <a
+                    class="globant-logo"
+                    href="https://www.globant.com/"
+                    target="_blank"
+                    title="Globant"
+                    ><img src="/assets/img/globant-logo.png" alt="Globant"
+                /></a>
+            </div>
         </div>
     </div>
     <div class="section-wrapper">
@@ -36,14 +45,25 @@
         <div class="section-content">
             <div class="jw-communities">
                 <a
-                    href="https://www.meetup.com/Angular-Medellin/"
+                    href="https://www.meetup.com/GDG-Medellin/"
                     target="_blank"
-                    title="Angular Medellin"
+                    title="GDGMedellin.png"
                 >
                     <img
                         class="sponsorImg"
-                        src="/assets/img/communities/angularmed.jpeg"
-                        alt="Angular Medellin"
+                        src="/assets/img/communities/GDGMedellin.png"
+                        alt="GDGMedellin.png"
+                    />
+                </a>
+                <a
+                    href="https://www.meetup.com/GDG-Medellin/"
+                    target="_blank"
+                    title="Women Techmakers"
+                >
+                    <img
+                        class="sponsorImg"
+                        src="/assets/img/communities/wtm.png"
+                        alt="Women Techmakers Medellin"
                     />
                 </a>
             </div>
