--- a/src/app/home/section-guests/section-guests.component.html
+++ b/src/app/home/section-guests/section-guests.component.html
@@ -28,8 +28,11 @@
               <div class="person-name">
                 {{ guest.name }}
               </div>
-              <div class="person-company">
-                {{ guest.company }}
+              <div class="person-title">
+                {{ guest.title }}
+              </div>
+              <div class="person-social">
+                <a class="social-link" href="https://twitter.com/luixaviles" target="_blank" title="Luis Aviles"><img class="social-img" src="/assets/img/social/twitter.svg" />{{ guest.social }}</a>
               </div>
             </section>
           </div>
