--- a/src/app/home/section-mapa/section-mapa.component.html
+++ b/src/app/home/section-mapa/section-mapa.component.html
@@ -8,7 +8,7 @@
                 RutaN
             </h4>
 
-            <p>Av. El Poblado #5A 113, Medellín, Antioquia, Colombia</p>
+            <p>calle 67 N° 52-20, Barrio Sevilla de Medellín, Colombia.</p>
         </div>
     </div>
 </div>
