--- a/src/app/home/section-matriz/section-matriz.component.html
+++ b/src/app/home/section-matriz/section-matriz.component.html
@@ -1,16 +1,15 @@
 <div
     class="jw-footer"
-    [style.background-image]="trust('../../../assets/img/img-footer.jpg')"
 >
     <h4 class="jw-footer__text" appLocalize>¡No te lo pierdas!</h4>
-    <!--
-        <a
-            class="jw-btn"
-            href="https://www.eventbrite.com/e/development-week-edicion-medellin-node-js-tickets-66575784965"
-            target="_blank"
-            appLocalize
-        >
-            Registro
-        </a>
-    -->
+    
+    <a
+        class="jw-btn"
+        href="https://www.meetup.com/GDG-Medellin/events/262641229/"
+        target="_blank"
+        appLocalize
+    >
+        Registro
+    </a>
+   
 </div>
