--- a/src/app/home/section-matriz/section-matriz.component.scss
+++ b/src/app/home/section-matriz/section-matriz.component.scss
@@ -3,6 +3,7 @@
 .jw-footer {
     height: 305px;
     background-size: cover;
+    background-image: linear-gradient(rgba(63, 66, 90, 0.75), rgba(63, 66, 90, 0.75)), url(/assets/img/back-top.png);
     display: flex;
     flex-direction: column;
     align-items: center;
