--- a/src/app/home/section-topo/section-topo.component.html
+++ b/src/app/home/section-topo/section-topo.component.html
@@ -25,7 +25,7 @@
                                 href="https://www.meetup.com/GDG-Medellin/events/262641229/"
                                 target="_blank"
                                 appLocalize
-                                >Register</a
+                                >Registro</a
                             >
                         </div>
                     </div>
@@ -33,7 +33,7 @@
                     <div class="main-details-conduct">
                         <a
                             class="conduct-link"
-                            href="http://jsconf.com/codeofconduct.html"
+                            href="https://developers.google.com/community/gdg/organizers/resources/#code-of-conduct"
                             target="_blank"
                             appLocalize
                             >Código de conducta</a
