--- a/src/scss/imports.scss
+++ b/src/scss/imports.scss
@@ -2,8 +2,9 @@
 @import 'cssMixins';
 //@import "../../node_modules/materialize-css/dist/css/materialize.css";
 
-$verde: #f0db4c;
-$sushi: #8fc43f;
+$verde: #0F9D58;
+$sushi: #4285F4;
+$yellow: #F4B400;
 $gun-powder: #3f425a;
 $wild-sand: #f5f5f5;
 $silver: #b8b8b8;
