speacial guest updated

--- a/src/app/home/section-apoio/section-apoio.component.html
+++ b/src/app/home/section-apoio/section-apoio.component.html
@@ -29,6 +29,15 @@
                     ><img src="/assets/img/globant-logo.png" alt="Globant"
                 /></a>
             </div>
+            <div>
+                <a
+                    class="globant-logo"
+                    href="https://www.endava.com/en"
+                    target="_blank"
+                    title="Endava"
+                    ><img src="/assets/img/endava.png" alt="Endava"
+                /></a>
+            </div>
         </div>
     </div>
     <div class="section-wrapper">
