feat(*) new speaker added

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,8 @@
 
     <call-for-proposals></call-for-proposals>
 
-    <!-- <app-speakers></app-speakers> -->
+    <app-speakers></app-speakers>
+    
     <!-- <app-schedule></app-schedule> -->
 
     <app-section-mapa></app-section-mapa>
