--- a/src/app/home/section-guests/section-guests.component.html
+++ b/src/app/home/section-guests/section-guests.component.html
@@ -31,9 +31,9 @@
               <div class="person-title">
                 {{ guest.title }}
               </div>
-              <!-- <div class="person-social">
-                <a class="social-link" href="https://twitter.com/luixaviles" target="_blank" title="Luis Aviles"><img class="social-img" src="/assets/img/social/twitter.svg" />{{ guest.social }}</a>
-              </div> -->
+              <div class="person-social">
+                <a class="social-link" href="https://twitter.com/{{guest.social}}" target="_blank" title="{{guest.title}}"><img class="social-img" src="/assets/img/social/twitter.svg" />{{ guest.social }}</a>
+              </div>
             </section>
           </div>
         </div>
