--- a/src/app/home/speakers/speakers.component.html
+++ b/src/app/home/speakers/speakers.component.html
@@ -1,5 +1,5 @@
 <div class="jw-speakers">
-    <h2 class="jw-speakers__title c-sushi heading-lg">OTROS SPEAKERS</h2>
+    <h2 class="jw-speakers__title c-sushi heading-lg">SPEAKERS</h2>
     <div class="jw-speakers__grid">
         <app-speaker
             *ngFor="let speaker of speakers"
