feat(*) Speakers and shcedule added

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,11 +10,11 @@
    
     <app-section-guests></app-section-guests>
 
-    <call-for-proposals></call-for-proposals>
+    <!-- <call-for-proposals></call-for-proposals> -->
 
     <app-speakers></app-speakers>
     
-    <!-- <app-schedule></app-schedule> -->
+    <app-schedule></app-schedule>
 
     <app-section-mapa></app-section-mapa>
 
