--- a/src/app/home/section-apoio/section-apoio.component.html
+++ b/src/app/home/section-apoio/section-apoio.component.html
@@ -38,6 +38,15 @@
                     ><img src="/assets/img/endava.png" alt="Endava"
                 /></a>
             </div>
+            <div>
+                <a
+                    class="globant-logo"
+                    href="http://www.jalasoft.com/"
+                    target="_blank"
+                    title="Jalasoft"
+                    ><img src="/assets/img/Jalasoft.png" alt="Jalasoft"
+                /></a>
+            </div>
         </div>
     </div>
     <div class="section-wrapper">
