Schedule changed and team memebers added

--- a/src/app/home/section-apoio/section-apoio.component.html
+++ b/src/app/home/section-apoio/section-apoio.component.html
@@ -9,6 +9,16 @@
             <h3 class="section-title__text" appLocalize>
                 Patrocina
             </h3>
+            <div>&nbsp;</div>
+            <div>
+                <a
+                    class="globant-logo"
+                    href="https://www.google.com/"
+                    target="_blank"
+                    title="Google"
+                    ><img src="/assets/img/google.png" alt="Google"
+                /></a>
+            </div>
         </div>
         <div class="section-content">
             <div>
